@@ -1,10 +1,18 @@
 // $Id$
 
-project : dance, xerces, dance_config_handlers, dance_logger, dance_domainapplication_stub, dance_executionmanager_stub {
+project(Parsing_Test) : dance, xerces, dance_config_handlers, dance_logger, dance_domainapplication_stub, dance_executionmanager_stub {
   exename   = Parsing
 
   Source_Files {
     test.cpp
+  }
+}
+
+project(Domain_Parsing_Test) : dance, xerces, dance_config_handlers, dance_logger, dance_domainapplication_stub, dance_executionmanager_stub {
+  exename   = Domain_Parsing
+
+  Source_Files {
+    domain.cpp
   }
 }
 
